--- a/mos.yml
+++ b/mos.yml
@@ -22,8 +22,9 @@ libs:
   - origin: https://github.com/mongoose-os-libs/i2c
   - origin: https://github.com/mongoose-os-libs/core
   - origin: https://github.com/mongoose-os-libs/boards
+  - origin: https://github.com/mongoose-os-libs/ssd1306
   - origin: https://github.com/mongoose-os-libs/demo-bundle
-
+  - origin: https://github.com/mongoose-os-libs/rpc-service-i2c
 
 config_schema:
   - ["i2c.enable", true]
